<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dip"
    android:orientation="vertical" >

   

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/que" />

            <TextView
                android:id="@+id/informacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"                
                android:padding="5dip"
                android:textSize="16sp"
                android:text="@string/info" />

            <TextView
                android:id="@+id/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:text="@string/valores"/>

            <Button
                android:id="@+id/calculo2"
                style="@style/Texto_Botones"
                android:onClick="meterDatos"               
                android:text="@string/calculo" />

</LinearLayout>
