<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_margin="15dip"
    >

    <TextView
        android:id="@+id/instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
 		android:focusable="true"
        android:textSize="16sp"
        android:paddingTop="10dip"
        android:text="@string/instrucciones" />

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                
         >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              >

            <TextView
                android:id="@+id/edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/edad" />

            <EditText
                android:id="@+id/edad_usuario"              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:duplicateParentState="false"
                android:ems="10"
                android:inputType="number"
                android:longClickable="false"
                android:maxLength="3" >
                
                <requestFocus />
            </EditText>
                

            <TextView
                android:id="@+id/edad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/anyos" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:paddingBottom="5dip" >

            <TextView
                android:id="@+id/altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="2"               
                android:text="@string/altura" />

            <EditText
                android:id="@+id/altura_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_weight="1"             
                android:ems="10"
                android:inputType="number"
                android:maxLength="3" >                
            </EditText>

            <TextView
                android:id="@+id/altura2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cm" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:paddingBottom="5dip" >

            <TextView
                android:id="@+id/peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/peso" />

            <EditText
                android:id="@+id/peso_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="6" />

            <TextView
                android:id="@+id/peso2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/kg" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/calculadora"
        style="@style/Texto_Botones"
        android:layout_gravity="center"
        android:paddingBottom="5dip"
        android:onClick="calculoImc"
        android:text="@string/calculo" />

    <TextView
        android:id="@+id/datos_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"
        
        android:text="" />

    <TextView
        android:id="@+id/resultado_calculos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"        
        android:text="" />

    <Button
        android:id="@+id/solucion"
        style="@style/Texto_Botones"
        android:layout_gravity="center"
        android:paddingBottom="5dip"
        android:onClick="mostrarWeb"
        android:text=""
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/silueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dip"
        android:visibility="invisible" />

</LinearLayout>
